--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/tailwind": "^5.1.1",
     "astro": "^4.15.0",
+    "astro-icon": "^1.1.1",
     "tailwindcss": "^3.4.12"
   }
 }
